# deep-learning-classificacao-galaxias

./: .gitignore  README.md  pyproject.toml
data/: test_table.csv
notebooks/: main.ipynb
src/: config.py  funcoes.py  models.py  training_models_with_originals_images.py  training_models_with_segmented_images.py
